<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/segundaTela"
    android:gravity="center|top"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/biblioteca">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#ffffff"
        android:hint="@string/livro" />


    <Button
        android:id="@+id/btCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro" />

    <Button
        android:id="@+id/btConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar" />

    <Button
        android:id="@+id/btExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excluir" />

</LinearLayout>
